testsuite/tests/module/mod91.stderr

mod91.hs:3:16: error:
    Module ‘Prelude’ does not export ‘Eq((/=), eq)’
