testsuite/tests/module/mod91.hs
-- !!! Importing Class with bogus member
module M where
import Prelude(Eq((==),(/=),eq))

